# bullbearbot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SPRINT1_FINDINGS.md  SPRINT2_5_FINDINGS.md  SPRINT2_FINDINGS.md  SPRINT2_QW_FINDINGS.md  SPRINT3_FINDINGS.md  SPRINT4_FINDINGS.md  SPRINT5_FINDINGS.md  SPRINT6_FINDINGS.md  a2_decision_store.py  abstention.py  account_status.py  add_spine_adapter.py  anti_pattern_miner.py  attribution.py  audit_opus_eval_artifacts.py  backtest_runner.py  board_meeting.sh  bootstrap_iv_history.py  bot.py  bot_clients.py  bot_options.py  bot_options_stage0_preflight.py  bot_options_stage1_candidates.py  bot_options_stage2_structures.py  bot_options_stage3_debate.py  bot_options_stage4_execution.py  bot_stage0_precycle.py  bot_stage1_5_qualitative.py  bot_stage1_regime.py  bot_stage2_5_scratchpad.py  bot_stage2_python.py  bot_stage2_signal.py  bot_stage3_decision.py  bot_stage4_execution.py  (+94 more)
annex/: __init__.py  confession_channel.py  consensus_hallucination_detector.py  dream_mode.py  ghost_advisors.py  internal_parliament.py  narrative_contagion.py  personality_forks.py  ranking_tournament.py  reputation_economy.py  self_deception_detector.py  self_image_tracker.py  semantic_market_map.py  taxonomy_suggester.py  theory_of_failure.py  thesis_ecology.py  tom_profile.py
dashboard/: app.py  trading-bot-dashboard.service
docs/: a2_migration_status.md  a_grade_implementation_dossier.md  allocator_shadow_audit.md  alpha_measurement_framework_v1.0.0.md  backlog.md  backtest_audit_findings.md  bot_split_mapping.md  (+18 more)
(+213 files in other folders)
