[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bullbearbot"
version = "1.0.0"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
exclude = ["annex", "experiments", "scripts"]

[tool.ruff.lint]
# Phase 1: syntax errors only. Tighten (add E, F, W, I) as code cleanup proceeds.
select = ["E9"]
